Implement architecture related callbacks
